--- a/Home.html
+++ b/Home.html
@@ -5,6 +5,65 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Ai Là Tỉ Phú</h1>
+<h2>Hãy Chọn Giá Đúng</h2>
+<h3>Hãy Chọn Giá Đúng</h3>
+<h4>Hãy Chọn Giá Đúng</h4>
+<h5>Hãy Chọn Giá Đúng</h5>
+<h6>Hãy Chọn Giá Đúng</h6>
+<p>Trước đó, <b>Ozil</b> tuyên bố: "Dù thế nào, tôi vẫn sẽ cố gắng chiến<br/>
+    đấu cho cơ hội của mình và sẽ không để mùa giải thứ 8 của mình tại<br/>
+    Arsenal <u>kết thúc</u> như thế này. Tôi vẫn sẽ tiếp tục rèn luyện tốt nhất<br/>
+    có thể và sử dụng tiếng nói của mình chống lại sự tàn nhẫn và vì công<br/>
+    lý ở bất cứ đâu."</p>
 
+
+<img src="Ảnh/15349541_533868826819201_3350340522319981193_n.jpg" height="720" width="720"/><br/>
+<img src="Ảnh/gai-xonh-toc-ngan-1.jpg" height="720" width="720"/>
+<img src="Ảnh/a0cbda40-18dc-11eb-8f67-a484f6db61a1_image_hires_023819%20(1).webp" height="720" width="720"/><br/>
+<img src="Ảnh/20201027094445-8321.jpg" height="720" width="720">
+<figure>
+    <img src="Ảnh/gai-xonh-toc-ngan-1.jpg">
+    <figcaption>GAI XINH TOC NGAN</figcaption>
+</figure>
+<ol>
+    <li>Cơm rang dưa bò</li>
+    <li>Bít Tết</li>
+    <li>Mì Xào</li>
+    <li>Gà Quay</li>
+    <li>Bò Hầm</li>
+    <li>Vịt Quay Bắc Kinh</li>
+</ol>
+<ul>
+    <li>Sinh tố xoài</li>
+    <li>Coca</li>
+    <li>Pepsi</li>
+    <li>Coffe</li>
+    <li>Trà Sữa</li>
+</ul>
+<table>
+    <thead>
+    <th>Tên</th>
+    <th>Tuổi</th>
+    <th>Quê quán</th>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Nguyễn Hồng Quân</td>
+            <td>26</td>
+            <td>Hà Đông</td>
+        </tr>
+        <tr>
+            <td>Nguyễn Hoàng</td>
+            <td>27</td>
+            <td>Cầu Giấy</td>
+        </tr>
+        <tr>
+            <td>Nguyễn Huy Quân</td>
+            <td>29</td>
+            <td>Hà Đông</td>
+        </tr>
+    </tbody>
+</table>
 </body>
 </html>
